ADD: Skills Section, adjust css tomorrow

--- a/Day1/resume.html
+++ b/Day1/resume.html
@@ -15,6 +15,14 @@
             <p><strong>Email:</strong> <a href="mail:archer@gmail.com">Your Email</a></p>
         </div>
     </div>
+    <div class="section">
+        <h2>Skills</h2>
+        <ul>
+            <li contenteditable="true">Skill 1</li>
+            <li contenteditable="true">Skill 2</li>
+            <li contenteditable="true">Skill 3</li>
+        </ul>
+    </div>
 
     <div class="section">
         <h2>Education</h2>
@@ -23,7 +31,18 @@
 
     <div class="section">
         <h2>Work Experience</h2>
-        <p contenteditable="true">Work experience details go here.</p>
+        <div class="sub-section">
+            <h3>Job Title</h3>
+            <p contenteditable="true">Work experience details go here.</p>
+        </div>
+        <div class="sub-section">
+            <h3>Job Title</h3>
+            <p contenteditable="true">Work experience details go here.</p>
+        </div>
+        <div class="sub-section">
+            <h3>Job Title</h3>
+            <p contenteditable="true">Work experience details go here.</p>
+        </div>
     </div>
 </body>
 </html>
