--- a/Day1/resume.html
+++ b/Day1/resume.html
@@ -10,17 +10,17 @@
         <div class="section profile">
             <div class="name" contenteditable="true">Your Name</div>
             <div>
-                <p class="contact" contenteditable="true"><strong>Tel:</strong> Your Telephone Number</p>
-                <p class="contact" contenteditable="true"><strong>Email:</strong> <a href="mail:archer@gmail.com">Your Email</a></p>
+                <p class="contact" contenteditable="true"><strong>Tel:</strong> 123-456-789 </p>
+                <p class="contact" contenteditable="true"><strong>Email:</strong> <a href="mailto:name@gmail.com">name@gamil.com</a></p>
             </div>
         </div>
 
         <div class="section">
             <h2>Skills</h2>
             <ul>
-                <li contenteditable="true">Skill 1</li>
-                <li contenteditable="true">Skill 2</li>
-                <li contenteditable="true">Skill 3</li>
+                <li contenteditable="true">Skill 1 details go here.</li>
+                <li contenteditable="true">Skill 2 details go here.</li>
+                <li contenteditable="true">Skill 3 details go here.</li>
             </ul>
         </div>
 
@@ -28,8 +28,8 @@
             <h2>Education</h2>
             <div class="sub-section">
                 <div class="period">
-                    <p class="title" contenteditable="true">University</p>
-                    <p class="time" contenteditable="true">2010 - 2014</p>
+                    <div class="title" contenteditable="true">University, Major</div>
+                    <div class="time" contenteditable="true">2010 - 2014</div>
                 </div>
                 <p class="clear" contenteditable="true">Education details go here.</p>
             </div>
@@ -39,22 +39,22 @@
             <h2>Work Experience</h2>
             <div class="sub-section">
                 <div class="period">
-                    <p class="title" contenteditable="true">Job Title</p>
-                    <p class="time" contenteditable="true">2020 - now &nbsp;</p>
+                    <div class="title" contenteditable="true">Company, Job Title</div>
+                    <div class="time" contenteditable="true">2020 - now&thinsp;</div>
                 </div>
                 <p contenteditable="true">Work experience details go here.</p>
             </div>
             <div class="sub-section">
                 <div class="period">
-                    <p class="title" contenteditable="true">Job Title</p>
-                    <p class="time" contenteditable="true">2017 - 2020</p>
+                    <div class="title" contenteditable="true">Company, Job Title</div>
+                    <div class="time" contenteditable="true">2017 - 2020</div>
                 </div>
                 <p contenteditable="true">Work experience details go here.</p>
             </div>
             <div class="sub-section">
                 <div class="period">
-                    <p class="title" contenteditable="true">Job Title</p>
-                    <p class="time" contenteditable="true">2014 - 2017</p>
+                    <div class="title" contenteditable="true">Company, Job Title</div>
+                    <div class="time" contenteditable="true">2014 - 2017</div>
                 </div>
                 <p contenteditable="true">Work experience details go here.</p>
             </div>
