--- a/Day1/resume.html
+++ b/Day1/resume.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <title>Resume</title>
         <link rel="stylesheet" type="text/css" href="styles.css">
-        <script charset="UTF-8" src="click.js"></script>
+        <script charset="UTF-8" src="scripts.js"></script>
     </head>
     <body onload="registerClickHandler();">
         <div class="section profile">
@@ -26,37 +26,43 @@
 
         <div class="section">
             <h2>Education</h2>
-            <div class="sub-section">
+            <div class="sub-section education">
                 <div class="period">
                     <div class="title" contenteditable="true">University, Major</div>
                     <div class="time" contenteditable="true">2010 - 2014</div>
                 </div>
-                <p class="clear" contenteditable="true">Education details go here.</p>
+                <p contenteditable="true">Education details go here.</p>
+            </div>
+            <div class="hidden-bar">
+                <button class="hidden-button" onclick="addSubSection('education');">+</button>
             </div>
         </div>
 
         <div class="section">
             <h2>Work Experience</h2>
-            <div class="sub-section">
+            <div class="sub-section experience">
                 <div class="period">
                     <div class="title" contenteditable="true">Company, Job Title</div>
                     <div class="time" contenteditable="true">2020 - now&thinsp;</div>
                 </div>
                 <p contenteditable="true">Work experience details go here.</p>
             </div>
-            <div class="sub-section">
+            <div class="sub-section experience">
                 <div class="period">
                     <div class="title" contenteditable="true">Company, Job Title</div>
                     <div class="time" contenteditable="true">2017 - 2020</div>
                 </div>
                 <p contenteditable="true">Work experience details go here.</p>
             </div>
-            <div class="sub-section">
+            <div class="sub-section experience">
                 <div class="period">
                     <div class="title" contenteditable="true">Company, Job Title</div>
                     <div class="time" contenteditable="true">2014 - 2017</div>
                 </div>
                 <p contenteditable="true">Work experience details go here.</p>
+            </div>
+            <div class="hidden-bar">
+                <button class="hidden-button" onclick="addSubSection('experience');">+</button>
             </div>
         </div>
     </body>
